--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+  uni: UNRC
+  year: October, 2021 &mdash; January, 2018
   # awards:
-  # summary:
+  # summary: Computacion
